<resources>
    <string name="app_name">My Application</string>
    <string name="logo">Logo</string>
    <string name="goToLogin">goToLogin</string>
    <string name="login">Log in</string>
    <string name="Signup">Sign Up</string>
    <string name="email"> Enter Your Email</string>
    <string name="password"> Enter Your Password</string>
    <string name="createAccount">Create Account</string>
    <string name="WelcomeToHomePage">Welcome to the Home Page</string>
    <string name="fullName">Full name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="Start_learning">S t a r t L e a r n i n g</string>
    <string name="Word_list">W o r d l i s t</string>
    <string name="Log_out">L o g o u t</string>
    <string name="Quick_test">Q u i c k t e s t</string>
    <string name="famous">famous</string>
    <string name="welcome_to_the_Words_App">Welcome to the Words App !</string>
    <string name="englishLearner">English Learner</string>
    <string name="don_t_have_account_signup_full">Don\'t Have an account? Sign Up</string>
    <string name="title_activity_learning2">LearningActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cloud">Cloud</string>
    <string name="next">"Next"</string>
    <string name="Word_test">Word test</string>
    <string name="Verification">Verification</string>
    <string name="phone">Mobile Number</string>
    <string name="Notification">Notification</string>
    <string name="Dark_mode">Dark_mode</string>
    <string name="about">about</string>
    <string name="Privacy">Privacy</string>
    <string name="Settings">Settings</string>
    <string name="Security">Security</string>
    <string name="Edit_personal_detalis">Edit_personal_detalis</string>
    <string name="Language">Language</string>
    <string name="back">back</string>
    <string name="image">image</string>
    <string name="WordImage">WordImage</string>
    <string name="About">About App</string>
    <string name="aboutApp">عن التطبيق</string>
    <string name="Cloud">غيمة</string>
    <string name="Logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
