<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/pink1"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_border"
        android:importantForAccessibility="no"
        android:paddingTop="20dp"
        android:src="@drawable/login" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginTop="106dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="emailAddress"
        android:drawableEnd="@drawable/email_svgrepo_com"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingVertical="15dp" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="phone"
        android:drawableEnd="@drawable/phone_flip_alt_svgrepo_com"
        android:hint="@string/phone"
        android:inputType="number"
        android:paddingVertical="15dp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="password"
        android:drawableEnd="@drawable/lock_24dp_1f1f1f_fill0_wght400_grad0_opsz24"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:paddingVertical="15dp" />

    <TextView
        android:id="@+id/tv_signup_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/don_t_have_account_signup_full"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:padding="8dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_signup_prompt"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="64dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_border"
        android:backgroundTint="@color/pink1"
        android:paddingVertical="20dp"
        android:text="@string/login"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="25sp" />

</RelativeLayout>
