<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/Settings"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:contentDescription="@string/Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/option_button"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/student_medium_light_skin_tone_svgrepo_com"
            android:contentDescription="@string/Edit_personal_detalis"
             />

        <TextView
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="Edit Personal Detalis"
            android:textSize="18sp"/>
     </LinearLayout>

    <LinearLayout
        android:id="@+id/SettingsOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSettingsTitle">

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/option_button"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/notification_svgrepo_com"
                 android:contentDescription="@string/Notification" />

            <TextView
                android:id="@+id/tvNotifications"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/Notification"
                android:textSize="18sp"
                android:labelFor="@id/switchNotifications"
                android:contentDescription="@string/Notification" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/option_button"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/dark_mode_svgrepo_com"
                 android:contentDescription="@string/Dark_mode" />

            <TextView
                android:id="@+id/tvTheme"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/Dark_mode"
                android:textSize="18sp"
                android:labelFor="@id/switchTheme"
                android:contentDescription="@string/Dark_mode" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/option_button"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:padding="15dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/data_gdpr_message_svgrepo_com"
                android:contentDescription="@string/Privacy" />

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/Privacy"
                android:textSize="18sp"
                android:contentDescription="@string/Privacy" />
        </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/option_button"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/security_shield_svgrepo_com"
                 android:contentDescription="@string/Security" />

            <TextView
                android:id="@+id/tvSecurity"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/Security"
                android:textSize="18sp"
                android:contentDescription="@string/Security" />
        </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/option_button"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/language_svgrepo_com"
                 android:contentDescription="@string/Language" />

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/Language"
                android:textSize="18sp"
                android:contentDescription="@string/Language" />
        </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/option_button"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logout_exit_svgrepo_com"
                 android:contentDescription="@string/Logout" />

            <TextView
                android:id="@+id/btnLogOut"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/Logout"
                android:textSize="18sp"
                android:contentDescription="@string/Logout" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />
</androidx.constraintlayout.widget.ConstraintLayout>
